--- a/views/brav/login.ejs
+++ b/views/brav/login.ejs
@@ -58,6 +58,9 @@
                                 <div class="clearfix"></div>
                             </form>
                         </div>
+                        <div class="card-footer">
+                            <label>Not have an account register Here <a href="/register">register</a></label>
+                        </div>
                     </div>
                 </div>
             </div>
