--- a/views/brav/register.ejs
+++ b/views/brav/register.ejs
@@ -34,7 +34,7 @@
                 <div class="col-md-6">
                     <div class="card">
                         <div class="card-header card-header-primary">
-                            <h4 class="card-title">Login</h4>
+                            <h4 class="card-title">Register</h4>
                         </div>
                         <div class="card-body">
                             <form method="POST">
@@ -63,6 +63,9 @@
                                 </button>
                                 <div class="clearfix"></div>
                             </form>
+                        </div>
+                        <div class="card-footer">
+                            <label> Have an account login Here <a href="/login">login</a></label>
                         </div>
                     </div>
                 </div>
