--- a/views/brav/index.ejs
+++ b/views/brav/index.ejs
@@ -13,5 +13,5 @@
     </div>
 </div>
 <%  } %>
-<a class="btn btn-primary" href="#">SCHEDULE A SESSION</a>
+<a class="btn btn-primary" href="/addaschedule">SCHEDULE A SESSION</a>
 <div id="calendar"></div>
