--- a/views/brav/schedule.ejs
+++ b/views/brav/schedule.ejs
@@ -26,19 +26,13 @@
                         <div class="col-md-12">
                             <div class="form-group bmd-form-group">
                                 <label class="bmd-label-floating">Conflict Name</label>
-                                <input type="text" class="form-control" name="conflictname">
+                                <input required type="text" class="form-control" name="conflictname">
                             </div>
                         </div>
                         <div class="col-md-12">
                             <div class="form-group bmd-form-group">
                                 <label class="bmd-label-floating">Availability</label>
-                                <input type="datetime-local" class="form-control" name="availability">
-                            </div>
-                        </div>
-                        <div class="col-md-12">
-                            <div class="form-group bmd-form-group">
-                                <label class="bmd-label-floating">Partiesin Conflict (Sepreated by comma)</label>
-                                <input type="text" class="form-control" name="partiesinconflict">
+                                <input required type="datetime-local" class="form-control" name="availability">
                             </div>
                         </div>
                     </div>
@@ -47,7 +41,7 @@
                         <div class="col-md-12">
                             <div class="form-group bmd-form-group">
                                 <label class="bmd-label-floating">Description</label>
-                                <input type="text" name="description" class="form-control">
+                                <input required type="text" name="description" class="form-control">
                             </div>
                         </div>
 
