--- a/views/brav/sidebar.ejs
+++ b/views/brav/sidebar.ejs
@@ -18,6 +18,12 @@
                     <p>Call</p>
                 </a>
             </li>
+            <li class="nav-item ">
+                <a class="nav-link" href="/mettings">
+                    <i class="material-icons">meeting_room</i>
+                    <p>Metting</p>
+                </a>
+            </li>
         </ul>
     </div>
 </div>
